# neptune-tensorflow-keras

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/e2e/: action.yml
.github/workflows/: ci.yml  publish.yml
neptune_tensorflow_keras/: _version.py
neptune_tensorflow_keras/impl/: __init__.py
src/neptune_tensorflow_keras/: __init__.py  _version.py
src/neptune_tensorflow_keras/impl/: __init__.py  version.py
tests/: conftest.py  test_e2e.py
